tooling/nargo_cli/tests/snapshots/execution_success/brillig_continue_break/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "ndHBCoMwDAbgd+m5h2lV1FcZQ2qNUihtqa0wxHdfFOvcYDA8pcnfL5fMpIM2DI3UvRlJfZ9J66RScmiUEdxLo3E6L5TEtvEOAEfklKOy3IH2pNZBKUomrsL2abRcb9Vzh+mNEtAdVlzYSwXra6FvfftNkyzdcZKxg+f/++rwVXnBp0X0aXHJlyz6srrgWZ7vnhXJh39gx4V03xebuJO8VbC3fdDilPqnjUm8uHVGQBccrJu2DHe/AA==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
