tooling/nargo_cli/tests/snapshots/execution_success/brillig_continue_break/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "pdPdCoMgFAfwd/G6i5V9v8oYYXUKQVRMgxG9+yyytcFg6JUd//1OJ9AF9dCasaF8EBOq7wtqFWWMjg0THdFUcLu7rBFyZaMVgN1Cl9wqSRRwjWpuGIvQTJjZX5ok4fuqibLpLULAe7vahgNlsD2t0VvfftM4TQ4cp/jk2f++On0V6ksPn+TOJzkO9D7fx1l2eJzlYT6PfeYvsZu/TAN95TN/4TwuPv//YSvSUfV94meiKGkZHOVgeHdJ9VO6xN0YqUQHvVGwddoz2/sF",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
